--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -18,7 +20,173 @@
 
     <LinearLayout
         style="@style/VerticalLinearLayout"
-        android:layout_weight="10">
+        android:layout_weight="9">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/tv_account"
+                style="@style/SettingTitleTextView"
+                android:text="@string/text_account"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:id="@+id/tv_profile"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_profile"
+                app:layout_constraintBottom_toTopOf="@id/tv_notification"
+                app:layout_constraintTop_toBottomOf="@id/tv_account"/>
+
+            <ImageView
+                android:id="@+id/iv_profile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_arrow_right"
+                app:layout_constraintBottom_toBottomOf="@id/tv_profile"
+                app:layout_constraintEnd_toEndOf="@id/tv_profile"
+                app:layout_constraintTop_toTopOf="@id/tv_profile"/>
+
+            <TextView
+                android:id="@+id/tv_notification"
+                style="@style/SettingTitleTextView"
+                android:text="@string/text_notification"
+                app:layout_constraintBottom_toTopOf="@id/tv_notice_with"
+                app:layout_constraintTop_toBottomOf="@id/tv_profile"/>
+
+            <TextView
+                android:id="@+id/tv_notice_with"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_notice_with"
+                app:layout_constraintTop_toBottomOf="@id/tv_notification"/>
+
+            <com.zcw.togglebutton.ToggleButton
+                style="@style/SettingToggleButton"
+                app:layout_constraintBottom_toBottomOf="@id/tv_notice_with"
+                app:layout_constraintEnd_toEndOf="@id/tv_notice_with"
+                app:layout_constraintTop_toTopOf="@id/tv_notice_with"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/bg_setting_row"
+                app:layout_constraintTop_toBottomOf="@id/tv_notice_with"/>
+
+            <TextView
+                android:id="@+id/tv_notify"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_notify"
+                app:layout_constraintBottom_toTopOf="@id/tv_notice_event"
+                app:layout_constraintTop_toBottomOf="@id/tv_notice_with"/>
+
+            <com.zcw.togglebutton.ToggleButton
+                style="@style/SettingToggleButton"
+                app:layout_constraintBottom_toBottomOf="@id/tv_notify"
+                app:layout_constraintEnd_toEndOf="@id/tv_notify"
+                app:layout_constraintTop_toTopOf="@id/tv_notify"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/bg_setting_row"
+                app:layout_constraintTop_toBottomOf="@id/tv_notify"/>
+
+            <TextView
+                android:id="@+id/tv_notice_event"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_notice_event"
+                app:layout_constraintBottom_toTopOf="@id/tv_service"
+                app:layout_constraintTop_toBottomOf="@id/tv_notify"/>
+
+            <com.zcw.togglebutton.ToggleButton
+                style="@style/SettingToggleButton"
+                app:layout_constraintBottom_toBottomOf="@id/tv_notice_event"
+                app:layout_constraintEnd_toEndOf="@id/tv_notice_event"
+                app:layout_constraintTop_toTopOf="@id/tv_notice_event"/>
+
+            <TextView
+                android:id="@+id/tv_service"
+                style="@style/SettingTitleTextView"
+                android:text="@string/text_service"
+                app:layout_constraintBottom_toTopOf="@id/tv_notice"
+                app:layout_constraintTop_toBottomOf="@id/tv_notice_event"/>
+
+            <TextView
+                android:id="@+id/tv_notice"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_notice"
+                app:layout_constraintBottom_toTopOf="@id/tv_information"
+                app:layout_constraintTop_toBottomOf="@id/tv_service"/>
+
+            <ImageView
+                android:id="@+id/iv_notice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_arrow_right"
+                app:layout_constraintBottom_toBottomOf="@id/tv_notice"
+                app:layout_constraintEnd_toEndOf="@id/tv_notice"
+                app:layout_constraintTop_toTopOf="@id/tv_notice"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/bg_setting_row"
+                app:layout_constraintTop_toBottomOf="@id/tv_notice"/>
+
+            <TextView
+                android:id="@+id/tv_information"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_information"
+                app:layout_constraintBottom_toTopOf="@id/tv_sign_out"
+                app:layout_constraintTop_toBottomOf="@id/tv_notice"/>
+
+            <ImageView
+                android:id="@+id/iv_information"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_arrow_right"
+                app:layout_constraintBottom_toBottomOf="@id/tv_information"
+                app:layout_constraintEnd_toEndOf="@id/tv_information"
+                app:layout_constraintTop_toTopOf="@id/tv_information"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:text="@string/text_latest"
+                android:textColor="@color/text_setting"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="@id/tv_information"
+                app:layout_constraintEnd_toStartOf="@id/iv_information"
+                app:layout_constraintTop_toTopOf="@id/tv_information"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/bg_setting_row"
+                app:layout_constraintTop_toBottomOf="@id/tv_information"/>
+
+            <TextView
+                android:id="@+id/tv_sign_out"
+                style="@style/SettingContentTextView"
+                android:text="@string/text_sign_out"
+                app:layout_constraintTop_toBottomOf="@id/tv_information"/>
+
+            <ImageView
+                android:id="@+id/iv_sign_out"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_arrow_right"
+                app:layout_constraintBottom_toBottomOf="@id/tv_sign_out"
+                app:layout_constraintEnd_toEndOf="@id/tv_sign_out"
+                app:layout_constraintTop_toTopOf="@id/tv_sign_out"/>
+
+        </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
 
