--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -9,8 +9,7 @@
 
     <com.github.ybq.android.spinkit.SpinKitView
         android:id="@+id/progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        style="@style/SpinKitViewProgressbar"/>
 
     <LinearLayout
         android:id="@+id/ll_input"
