--- a/app/src/main/res/layout/fragment_collect.xml
+++ b/app/src/main/res/layout/fragment_collect.xml
@@ -1,54 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:background="@android:color/white">
+
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <LinearLayout
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="9">
-
-        <TextView
-            android:id="@+id/tv_letter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:padding="10dp"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="1">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            style="@style/HorizontalLinearLayout"
-            android:layout_weight="1"
-            android:gravity="center_vertical">
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="9">
 
             <TextView
-                android:id="@+id/tv_place"
-                style="@style/PlaceTextView"
-                tools:text="어딘가에서"/>
+                android:id="@+id/tv_letter"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:padding="10dp"/>
 
         </LinearLayout>
 
         <LinearLayout
-            style="@style/HorizontalLinearLayout"
-            android:layout_weight="1"
-            android:gravity="center_vertical|end">
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="1">
 
-            <TextView
-                android:id="@+id/tv_date"
-                style="@style/DateTextView"
-                tools:text="2018년 3월 7일"/>
+            <LinearLayout
+                style="@style/HorizontalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/tv_place"
+                    style="@style/PlaceTextView"
+                    tools:text="어딘가에서"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                style="@style/HorizontalLinearLayout"
+                android:layout_weight="1"
+                android:gravity="center_vertical|end">
+
+                <TextView
+                    android:id="@+id/tv_date"
+                    style="@style/DateTextView"
+                    tools:text="2018년 3월 7일"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
