--- a/app/src/main/res/layout/item_expand.xml
+++ b/app/src/main/res/layout/item_expand.xml
@@ -1,54 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="150dp"
-    android:background="@android:color/white"
-    android:orientation="vertical">
+    android:background="@android:color/white">
+
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
     <LinearLayout
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="3">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="5dp">
+        <LinearLayout
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="3">
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/tv_month"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    tools:text="10월"/>
+
+                <TextView
+                    android:id="@+id/tv_day"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:paddingTop="12dp"
+                    android:textSize="15sp"
+                    tools:text="21"/>
+
+            </RelativeLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="7">
 
             <TextView
-                android:id="@+id/tv_month"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                tools:text="10월"/>
+                android:id="@+id/tv_letter"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="9sp"
+                tools:ignore="SmallSp"
+                tools:text="This is test code."/>
 
-            <TextView
-                android:id="@+id/tv_day"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="12dp"
-                android:textSize="17sp"
-                tools:text="21"/>
-
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 
-    <LinearLayout
-        style="@style/VerticalLinearLayout"
-        android:layout_weight="7">
-
-        <TextView
-            android:id="@+id/tv_letter"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:textSize="9sp"
-            tools:ignore="SmallSp"
-            tools:text="This is test code."/>
-
-    </LinearLayout>
-
-</LinearLayout>
+</RelativeLayout>
