--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -56,10 +56,9 @@
 
                 <ImageView
                     android:id="@+id/iv_explain"
-                    android:layout_width="match_parent"
+                    style="@style/HorizontalConstraintParent"
+                    android:layout_width="0dp"
                     android:layout_height="150dp"
-                    android:layout_margin="10dp"
-                    android:background="@drawable/profile"
                     app:layout_constraintTop_toBottomOf="@id/tv_explain"/>
 
                 <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
