--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -56,10 +56,13 @@
 
                 <ImageView
                     android:id="@+id/iv_explain"
-                    style="@style/HorizontalConstraintParent"
                     android:layout_width="0dp"
                     android:layout_height="150dp"
-                    app:layout_constraintTop_toBottomOf="@id/tv_explain"/>
+                    android:scaleType="fitXY"
+                    app:layout_constraintEnd_toEndOf="@id/tfb_me"
+                    app:layout_constraintStart_toStartOf="@id/tfb_me"
+                    app:layout_constraintTop_toBottomOf="@id/tv_explain"
+                    tools:background="@drawable/profile"/>
 
                 <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
                     android:id="@+id/tfb_me"
