--- a/app/src/main/res/layout/fragment_write.xml
+++ b/app/src/main/res/layout/fragment_write.xml
@@ -170,11 +170,18 @@
                 style="@style/IconImageButton"
                 android:background="@drawable/ic_adjustment"/>
 
+            <ImageButton
+                android:id="@+id/ib_blur"
+                style="@style/IconImageButton"
+                android:background="@drawable/ic_blur"/>
+
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_bottom"
             style="@style/VerticalLinearLayout"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:visibility="visible">
 
             <LinearLayout
                 style="@style/HorizontalLinearLayout"
@@ -234,6 +241,32 @@
                     android:visibility="visible"/>
 
             </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_bottom2"
+            style="@style/VerticalLinearLayout"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/godo"
+                android:text="@string/text_blur"/>
+
+            <SeekBar
+                android:id="@+id/sb_blur"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:max="100"
+                android:thumb="@drawable/ic_seekbar"/>
 
         </LinearLayout>
 
